<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <Button
        android:id="@+id/btnataskiri"
        android:layout_width="140dp"
        android:layout_height="245dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:onClick="openMain"
        android:text="@string/btnataskiri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btnataskanan"
        android:layout_width="140dp"
        android:layout_height="245dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btnataskanan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="openscrolling"/>

    <ImageButton
        android:id="@+id/ibbbawahkanan"
        android:layout_width="146dp"
        android:layout_height="252dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/recap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnataskanan"
        app:layout_constraintVertical_bias="0.511"
        android:onClick="mainView"/>

    <ImageButton
        android:id="@+id/ibbawahkiri"
        android:layout_width="146dp"
        android:layout_height="252dp"
        android:layout_marginStart="48dp"
        android:src="@drawable/ambawick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnataskiri"
        app:layout_constraintVertical_bias="0.511"
        android:tooltipText="@string/ibbawahkiri"
        android:onClick="toastView"/>

</androidx.constraintlayout.widget.ConstraintLayout>